--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+torch==2.1.0
+setuptools==65.5.0
+wheel==0.38
+imageio
+imageio-ffmpeg
+moviepy
+stable-baselines3[extra]
+ipython
 importlib-metadata==4.13.0
 gym==0.21.0
 stable-baselines3[extra]==1.7.0
